Closed
Bug 416630
Opened 17 years ago
Closed 17 years ago
nsColumnSetFrame unbounded last column next in flow check is reversed
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla1.9beta4
People
(Reporter: craig.topper, Assigned: craig.topper)
Details
(Keywords: perf)
Attachments
(1 file)
1.30 KB,
patch
|
roc
:
review+
roc
:
superreview+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008020904 Minefield/3.0b4pre
Build Identifier:
There is a section of code nsColumnSetFrame::Reflow that reads:
// If balancing, then we allow the last column to grow to unbounded
// height during the first reflow. This gives us a way to estimate
// what the average column height should be, because we can measure
// the heights of all the columns and sum them up. But don't do this
// if we have a next in flow because we don't want to suck all its
// content back here and then have to push it out again!
nsIFrame* nextInFlow = GetNextInFlow();
PRBool unboundedLastColumn = isBalancing && nextInFlow;
Based on the comment above it, I believe the last line should be:
PRBool unboundedLastColumn = isBalancing && !nextInFlow;
I don't know what symptoms this would exhibit during rendering.
Reproducible: Didn't try
Steps to Reproduce:
1.
2.
3.
Assignee | ||
Comment 1•17 years ago
|
||
Comment on attachment 302374 [details] [diff] [review]
Patch to reverse the check
This simple think-o should speed up columns rendering significantly.
Attachment #302374 -
Flags: superreview+
Attachment #302374 -
Flags: review+
Attachment #302374 -
Flags: approval1.9?
Updated•17 years ago
|
Assignee: nobody → craig.topper
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Updated•17 years ago
|
Attachment #302374 -
Flags: approval1.9? → approval1.9+
Updated•17 years ago
|
Keywords: checkin-needed
Comment 3•17 years ago
|
||
Checking in layout/generic/nsColumnSetFrame.cpp;
/cvsroot/mozilla/layout/generic/nsColumnSetFrame.cpp,v <-- nsColumnSetFrame.cpp
new revision: 3.47; previous revision: 3.46
done
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta4
You need to log in
before you can comment on or make changes to this bug.
Description
•