Bug 416630 - "nsColumnSetFrame unbounded last column next in flow check is reversed" [p=craig.topper@gmail.com (Craig Topper) r+sr=roc a1.9=schrep]